# InvestmentPortfolio

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  mypy.ini  requirements.txt  ruff.toml  stubs-requirements.txt  test_requirements.txt
investment_etl/: README.md  mypy.ini  pyproject.toml  ruff.toml
investment_etl/investment_etl/: __init__.py
investment_etl/investment_etl/bronze_layer/: app.py
investment_etl/investment_etl/bronze_layer/utils/: __init__.py  async_data_ingestor.py
investment_etl/investment_etl/gold_layer/: app.py
investment_etl/investment_etl/gold_layer/pipelines/: enrich_daily_results.py
investment_etl/investment_etl/silver_layer/: __init__.py  app.py
investment_etl/investment_etl/silver_layer/tables/: __init__.py
investment_etl/investment_etl/silver_layer/utils/: __init__.py  bronze_source.py  silver_pipeline.py
investment_etl/investment_etl/utils/: __init__.py
investment_etl/investment_etl/utils/base_tables/: __init__.py
investment_etl/tests/: conftest.py
investment_etl/tests/test_utils/: spark_vs_delta_tables_test.py
investment_gui/: README.md  create_desktop_shortcut.py  mypy.ini  pyproject.toml  ruff.toml
investment_gui/docker/: docker-compose.yml
investment_gui/docker/run_medaillon/: Dockerfile  investment_etl-0.1.3-py3-none-any.whl  requirements.txt
investment_gui/investment_gui/: __init__.py  app.py
investment_gui/investment_gui/application/: __init__.py  application.py
investment_gui/tests/: conftest.py
investment_gui/tests/application/: test_application.py
(+162 files in other folders)
