[project]
name = "investment-etl"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "delta-spark>=4.0.0",
    "deltalake>=1.1.4",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.9",
    "pyspark>=4.0.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pyarrow-stubs>=20.0.0.20250825",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "types-aiofiles>=24.1.0.20250822",
    "types-requests>=2.32.4.20250913",
]
