[project]
name = "investment-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "investment-etl",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[tool.uv.sources]
investment-etl = { path = "../investment_etl" }

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "types-pywin32>=311.0.0.20250915",
    "types-requests>=2.32.4.20250913",
]
